--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,5 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/frontend', '.' ]
+  args: [ 'build', '-t', 'gcr.io/milano-recuiting-group2/frontend', '.' ]
 images:
-- 'gcr.io/$PROJECT_ID/frontend'
-substitutions:
-    PROJECT_ID: world
+- 'gcr.io/milano-recuiting-group2/frontend'
