--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "axios": "^0.19.0",
     "cors": "^2.8.5",
     "jsonwebtoken": "^8.5.1",
+    "jwt-redis": "^5.0.9",
     "node-fetch": "^2.6.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-json-pretty": "^2.2.0",
     "react-scripts": "3.2.0",
+    "recharts": "^1.8.5",
+    "redis": "^2.8.0",
     "redux-form": "^8.2.6"
   },
   "scripts": {
